# commit-explorer

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/repo-archaeology/: SKILL.md
.specify/: init-options.json
.specify/memory/: constitution.md
docs/: CLI.md  graph-rendering.md
skills/repo-archaeology/: SKILL.md
specs/20260329-205124-branch-compare/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/20260329-205124-branch-compare/checklists/: requirements.md
specs/20260329-205124-branch-compare/contracts/: export-format.md  key-bindings.md
specs/20260329-233618-pr-review/: spec.md  tasks.md
specs/20260404-211557-cli-commit-export/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/20260404-211557-cli-commit-export/checklists/: requirements.md
specs/20260404-211557-cli-commit-export/contracts/: cli-flags.md
specs/20260418-212347-agent-friendly-cli/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/20260418-212347-agent-friendly-cli/checklists/: requirements.md
specs/20260418-212347-agent-friendly-cli/contracts/: cli-flags.md
src/commit_explorer/: __init__.py  backend.py  cli.py  export.py  format.py  init.py  models.py  pr.py  providers.py  utils.py
src/commit_explorer/ui/: app.py  compare.py  widgets.py
tests/: conftest.py  test_backend.py  test_cli.py  test_exports.py  test_file_history.py  test_format.py  test_helpers.py  test_providers.py
