[project]
name = "commit-explorer"
version = "0.1.0"
description = "Interactive TUI for exploring git repository history"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
commit-explorer = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["app.py"]
