[project]
name = "commit-explorer"
version = "0.1.0"
description = "Interactive TUI for exploring git repository history"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70.0",
    "python-dotenv>=1.0.0",
    "dulwich>=0.21.0",
    "urllib3>=2.0.0",
]

[project.scripts]
commit-explorer = "app:main"
cex = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["app.py"]
