[project]
name = "commit-explorer"
version = "0.2.1"
description = "CLI and TUI for exploring remote git history; agent-friendly output with editor skill integration"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70.0",
    "python-dotenv>=1.0.0",
    "dulwich>=0.21.0",
    "urllib3>=2.0.0",
]

[project.scripts]
commit-explorer = "commit_explorer.cli:main"
cex = "commit_explorer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "network: tests that clone locchh/commit-explorer over the network",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commit_explorer"]
